Lesson 14, using try-with resources for rates reading